kubernetes/applications/apps/paperless/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/controller: paperless
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
